# notas-musicais

./: mkdocs.yml  pyproject.toml
.github/workflows/: pipeline.yml
docs/: 02_contribua.md  index.md
docs/api/: escalas.md
docs/stylesheets/: extra.css
docs/templates/: cards.html  instalacao.md
notas_musicais/: acordes.py  campo_harmonico.py  cli.py  escala.py  escalas.py
tests/: test_acordes.py  test_cli.py  test_escalas.py
